<resources>
    <string name="app_name">EasyV</string>
    <string name="home">Home</string>
    <string name="result">Result</string>
    <string name="profile">Profile</string>
    <string name="vote">Vote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_summary">Welcome back, provide your details to login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">e.g maxwellcpe175000@futa.edu.ng</string>
    <string name="password">Password</string>
    <string name="hint_password">**********</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_summary">Kindly provide the few details below and we will setup your account for you</string>
    <string name="full_name">Full Name</string>
    <string name="name_hint">e.g George Maxwell</string>
    <string name="matriculation_number">Matriculation Number</string>
    <string name="choose_password">Choose Password</string>
    <string name="password_requirement">Password must be at least 8 characters\nand have at least a:\n Uppercase letter e.g A\n Special character e.g @\n Number e.g 1</string>
    <string name="matriculation_number_hint">CPE/17/5000</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_password">Change Password</string>
    <string name="privacy">Privacy</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="back_button">Back button</string>
    <string name="password_recovery_summary">Hi there, Kindly enter to email to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_started">Get Started</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="terms">Terms</string>
    <string name="read_about_our">Read about our</string>
    <string name="vote_from_comfort">Vote at your convenience</string>
    <string name="vote_from_comfort_description">Voting should be a hassel free excercise. Vote for the right person from the comfort of your mobile device.</string>
    <string name="realtime_result">Realtime Result</string>
    <string name="realtime_result_description">"Voting should be a very transparent excercise. See how each candidate is performing in realtime. "</string>
    <string name="see_candidate_profile">See candidate profile</string>
    <string name="see_candidate_profile_description">Accurate information you need to know about the candidate in one place at your finger tips.</string>
    <string name="admin_summary">You are an admin and there for, not eligible to vote. Click the button below to add a new candidate</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="voted_summary">You have already casted your vote. Hence, you are not eligble to vote again. Click the button below to see the results</string>
    <string name="see_results">See Results</string>
    <string name="vote_summary">Pick the candidate of your choice by checking the box.</string>
    <string name="result_summary">Find below the current status of each candidate.</string>
    <string name="school">School</string>
    <string name="select">Select</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="type_here">Type here…</string>
    <string name="no_candidate_summary">There are no candidates at the moment. Kindly check back later.</string>
    <string name="home_summary">Find below the candidates in the ongoing election. Click a candidate to view more information about them.</string>
    <string name="app_slogan">The hassle-free voting platform</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="votes">Votes</string>
    <string name="phone_number_hint">e.g +2349024756184</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string-array name="schools">
        <item>SCHOOL OF ENGINEERING AND ENGINEERING TECHNOLOGY</item>
        <item>SCHOOL OF AGRICULTURE AND AGRICULTURAL TECHNOLOGY</item>
        <item>SCHOOL OF EARTH AND MINERAL SCIENCE</item>
        <item>SCHOOL OF COMPUTING</item>
        <item>SCHOOL OF ENVIRONMENTAL TECHNOLOGY</item>
        <item>SCHOOL OF PHYSICAL SCIENCES</item>
    </string-array>
    <string-array name="positions">
        <item>Presidential Candidate</item>
    </string-array>
</resources>